# IS2view

./: .gitignore  CITATION.cff  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  environment.yml  postBuild  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-request.yml
IS2view/: IS2view.py  __init__.py  api.py  convert.py  io.py  tools.py  utilities.py  version.py  viewer.py  visualization.py
doc/: environment.yml
doc/source/: conf.py  index.rst
doc/source/_assets/: is2view-refs.bib
doc/source/_static/: style.css
doc/source/api_reference/: IS2view.rst  api.rst  convert.rst  io.rst  tools.rst  utilities.rst  visualization.rst
doc/source/getting_started/: Citations.rst  Contributing.rst  Data-Products.rst  Examples.rst  Getting-Started.rst  Install.rst  NASA-Earthdata.rst  Resources.rst
doc/source/notebooks/: IS2-ATL14-Viewer.ipynb  IS2-ATL15-Viewer.ipynb
doc/source/release_notes/: release-v0.0.1.rst  release-v0.0.2.rst  release-v0.0.3.rst  release-v0.0.4.rst  release-v0.0.5.rst  release-v0.0.6.rst  release-v0.0.7.rst  release-v0.0.8.rst  release-v0.0.9.rst  release-v0.1.0.rst  release-v0.1.1.rst
doc/source/user_guide/: Examples.rst  IS2view.rst  Recipes.rst
notebooks/: IS2-ATL14-Viewer.ipynb  IS2-ATL15-Viewer.ipynb
